# Quantifying-Surprise-EHRs

./: .editorconfig  .gitattributes  .gitignore  .prettierrc.toml  .taplo.toml  CITATION.cff  LICENSE.md  README.md  pyproject.toml  requirements.txt
fms_ehrs/framework/: dataset.py  logger.py  plotting.py  stats.py  tokenizer.py  util.py  vocabulary.py
fms_ehrs/scripts/: add_posthoc_data.py  aggregate_model_preds.py  aggregate_sft_preds.py  aggregate_summary_stats.py  aggregate_version_preds.py  cluster_reps.py  create_train_val_test_split.py  embed_reps.py  examine_models.py  extract_all_hidden_states.py  extract_hidden_states.py  extract_log_probs.py  extract_outcomes.py  find_outliers_oos.py  fine_tune_classification.py  fine_tuned_predictions.py  lr_predictions_over_time.py  process_clusters.py  process_embeddings.py  process_log_probs.py  process_perf_by_demographic.py  process_rep_trajs_inf.py  process_representation_trajectories.py  process_sft_preds.py  process_stats.py  query_raw_mimic.py  query_raw_ucmc.py  redact_timelines.py  rep_changes_by_event.py  sft_predictions_over_time.py  tokenize_train_val_test_split.py  transfer_rep_based_preds.py  tune_model.py  (+1 more)
slurm/: 01_create_data_splits.sh  02_tokenize_data_splits.sh  03_extract_outcomes.sh  04_tune_model.sh  05_examine_model.sh  06_extract_information.sh  07_process_info.sh  08_redact_timelines.sh  09_extract_reps.sh  10_xfer_rep_based_preds.sh  11_version_comparison.sh  12_run_stats.sh  13_extract_all_reps.sh  14_process_trajectories.sh  15_jumps_vs_info.sh  16_aggregate_stats.sh  17_pull_mimic_info.sh  preamble.sh
