[project]
    classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
    ]
    dependencies = [
        "black>=24.10",
        "datasets>=3.2",
        "fire>=0.7",
        "isort>=5.13",
        "joblib>=1.4",
        "kaleido>=0.2,<1",
        "lightgbm>=4.5",
        "numba>=0.61",
        "numpy>=1.26,<2",
        "optuna>=4.2",
        "pacmap==0.8.0",
        "pandas>=2.2",
        "pip>=25.1",
        "plotly~=5.24.1",
        "polars>=1.20",
        "ray",
        "scikit-learn>=1.6",
        "scipy>=1.15",
        "seaborn>=0.13.2",
        "statsmodels>=0.14",
        "torch",
        "transformers>=4.48",
        "trl==0.13.0",
        "tqdm>=4.67",
        "umap-learn==0.5.7",
        "xgboost>=2.1",
    ]
    license-files = [ "LICENSE.md" ]
    name = "fms-ehrs"
    readme = { file = "README.md", content-type = "text/markdown" }
    requires-python = ">=3.12"
    version = "25.1.0"

[tool.setuptools.packages]
    find = {}

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = [ "setuptools>=75.0", "wheel", "ninja" ]

[tool.black]
    line_length    = 88
    target-version = [ "py312" ]

[tool.isort]
    atomic         = true
    line_length    = 88
    profile        = "black"
    skip_gitignore = true

[tool.uv]
    no-cache = true
